# rust-modular-hexagonal-api-template

./: .env.template  Cargo.toml  README.md
migrations/2026-02-15-101604-0000_create_users/: up.sql
migrations/2026-02-15-101604-0001_create_roles/: down.sql  up.sql
migrations/2026-02-15-101604-0002_create_sessions/: up.sql
migrations/2026-02-15-101604-0003_create_verification_tokens/: down.sql  up.sql
migrations/2026-02-15-101604-0004_create_posts/: up.sql
src/: main.rs  schema.rs
src/common/: config.rs  database.rs  errors.rs  logging.rs  mod.rs  user_agent_parser.rs
src/email_templates/: password_reset.html  password_reset.txt  verification.html  verification.txt
src/modules/: mod.rs
src/modules/auth/application/: mod.rs  service.rs  token_service.rs
src/modules/auth/domain/: entity.rs  mod.rs  repository.rs  token.rs
src/modules/auth/domain/entity/: token.rs
src/modules/auth/domain/repository/: verification.rs
src/modules/auth/infrastructure/: diesel_repository.rs  diesel_token_repository.rs  mod.rs  password_service.rs
src/modules/auth/interfaces/http/: dto.rs  handlers.rs  middleware.rs  mod.rs  (+1 more)
src/modules/email/domain/: service.rs
src/modules/email/infrastructure/: resend.rs
src/modules/posts/application/: service.rs
src/modules/posts/domain/: entity.rs  repository.rs
src/modules/posts/infrastructure/: diesel_repository.rs
src/modules/posts/interfaces/: http.rs
src/modules/users/application/: service.rs
src/modules/users/domain/: entity.rs  repository.rs
src/modules/users/infrastructure/: diesel_repository.rs  mod.rs
(+6 files in other folders)
