[package]
name = "rust-modular-hexagonal-api-template"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.6"

# Async Runtime
tokio = { version = "1.34", features = ["full"] }

# Database
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "8.3"
rand = "0.8"

# Utilities
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"

# HTTP Client (for Resend)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
